--- a/templates/post/view.html.twig
+++ b/templates/post/view.html.twig
@@ -1,10 +1,10 @@
 {% extends 'clean.html.twig' %}
 
-{% block title %}Hello PageController!{% endblock %}
+{% block title %}Hello PostController!{% endblock %}
 
 {% block body %}
-    <!-- Page Header-->
-    <header class="masthead" style="background-image: url({{ asset('clean/assets/img/about-bg.jpg') }})">
+   <!-- Page Header-->
+    <header class="masthead" style="background-image: url({{ asset('clean/assets/img/post-bg.jpg') }})">
         <div class="container position-relative px-4 px-lg-5">
             <div class="row gx-4 gx-lg-5 justify-content-center">
                 <div class="col-md-10 col-lg-8 col-xl-7">
