Add a title to each page

--- a/templates/page/view.html.twig
+++ b/templates/page/view.html.twig
@@ -1,6 +1,6 @@
 {% extends 'clean.html.twig' %}
 
-{% block title %}Hello PageController!{% endblock %}
+{% block title %}Contact{% endblock %}
 
 {% block body %}
     <!-- Page Header-->
