--- a/templates/clean.html.twig
+++ b/templates/clean.html.twig
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="jerkoder" content="" />
-        <title>{% block title %}Symfony project - Clean Blog{% endblock %}</title>
+        <title>Symfony project - Clean Blog - {% block title %}Accueil{% endblock %}</title>
         {# Run `composer require symfony/webpack-encore-bundle`
            and uncomment the following Encore helpers to start using Symfony UX #}
         {% block stylesheets %}
