--- a/templates/page/index.html.twig
+++ b/templates/page/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'clean.html.twig' %}
 
-{% block title %}Hello PageController!{% endblock %}
+{% block title %}About{% endblock %}
 
 {% block body %}
     <!-- Page Header-->
