Modify the page controller and the corresponding views

--- a/templates/post/index.html.twig
+++ b/templates/post/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'clean.html.twig' %}
 
-{% block title %}Accueil{% endblock %}
+{% block title %}Accueil Posts{% endblock %}
 
 {% block body %}
 
