--- a/templates/clean.html.twig
+++ b/templates/clean.html.twig
@@ -36,9 +36,9 @@
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto py-4 py-lg-0">
                         <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href={{ path('post_home') }}>Home</a></li>
-                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href={{ path('about_home') }}>About</a></li>
+                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href={{ path('about') }}>About</a></li>
                         <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href={{ path('post_view', { id: 1 }) }}>Sample Post</a></li>
-                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href={{ path('about_view', { id: 1 }) }}>Contact</a></li>
+                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href={{ path('contact') }}>Contact</a></li>
                     </ul>
                 </div>
             </div>
