--- a/templates/clean.html.twig
+++ b/templates/clean.html.twig
@@ -43,9 +43,33 @@
                 </div>
             </div>
         </nav>
+
+        {% block header %}
+        <!-- Page Header-->
+
+        <header class="masthead" style="background-image: url({{ asset('clean/assets/img/home-bg.jpg') }})">
+            <div class="container position-relative px-4 px-lg-5">
+                <div class="row gx-4 gx-lg-5 justify-content-center">
+                    <div class="col-md-10 col-lg-8 col-xl-7">
+                        <div class="site-heading">
+                                <h1>
+                                    {% block h1 %}{{ block('title')}}{% endblock %}
+                                </h1>
+                                <h2 class="subheading">
+                                    {% block subTitle %}{% endblock %}
+                                </h2>
+                                <span class="meta">
+                                {% block meta %}{% endblock %}
+                            </span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </header>
+        {% endblock header %}
+
         <!-- Body -->
-        {% block body %}
-        {% endblock %}
+        {% block body %}{% endblock %}
 
         <!-- Footer-->
         <footer class="border-top">
