--- a/templates/page/about.html.twig
+++ b/templates/page/about.html.twig
@@ -2,25 +2,11 @@
 
 {% block title %}About{% endblock %}
 
+{# header #}
+{% block h1 %}About Me{% endblock %}
+{% block subTitle %}This is what I do.{% endblock %}
+
 {% block body %}
-    <!-- Page Header-->
-    <header class="masthead" style="background-image: url({{ asset('clean/assets/img/about-bg.jpg') }})">
-        <div class="container position-relative px-4 px-lg-5">
-            <div class="row gx-4 gx-lg-5 justify-content-center">
-                <div class="col-md-10 col-lg-8 col-xl-7">
-                    <div class="post-heading">
-                        <h1>Man must explore, and this is exploration at its greatest</h1>
-                        <h2 class="subheading">Problems look mighty small from 150 miles up</h2>
-                        <span class="meta">
-                            Posted by
-                            <a href="#!">Start Bootstrap</a>
-                            on August 24, 2021
-                        </span>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </header>
     <!-- Post Content-->
     <article class="mb-4">
         <div class="container px-4 px-lg-5">
