--- a/templates/clean.html.twig
+++ b/templates/clean.html.twig
@@ -48,6 +48,7 @@
         <!-- Page Header-->
 
         <header class="masthead" style="background-image: url({{ asset('clean/assets/img/home-bg.jpg') }})">
+
             <div class="container position-relative px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-7">
@@ -67,6 +68,23 @@
             </div>
         </header>
         {% endblock header %}
+
+        {# Affichage du message d'alerte #}
+        <main class="mb-4">
+			<div class="container px-4 px-lg-5">
+				<div class="row gx-4 gx-lg-5 justify-content-center">
+					<div class="col-md-10 col-lg-8 col-xl-7">
+						{# <div class="alert alert-danger" role="alert">test</div> #}
+						{% for flashSuccess in app.flashes('verify_email_success') %}
+							<div class="alert alert-success" role="alert">{{ flashSuccess }}</div>
+						{% endfor %}
+						{% for flashError in app.flashes('verify_email_error') %}
+							<div class="alert alert-error" role="alert">{{ flashError }}</div>
+						{% endfor %}
+					</div>
+				</div>
+			</div>
+		</main>
 
         <!-- Body -->
         {% block body %}{% endblock %}
