--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -1,21 +1,26 @@
-{% extends 'base.html.twig' %}
+{% extends 'clean.html.twig' %}
 
 {% block title %}Register{% endblock %}
+
 
 {% block body %}
     {% for flashError in app.flashes('verify_email_error') %}
         <div class="alert alert-danger" role="alert">{{ flashError }}</div>
     {% endfor %}
 
-    <h1>Register</h1>
-
+    <div class="container mt-2 w-25">
     {{ form_start(registrationForm) }}
         {{ form_row(registrationForm.email) }}
-        {{ form_row(registrationForm.plainPassword, {
-            label: 'Password'
-        }) }}
+        <div class="my-2">
+            {{ form_row(registrationForm.plainPassword, {
+                label: 'Password'
+            }) }}
+        </div>
         {{ form_row(registrationForm.agreeTerms) }}
 
-        <button type="submit" class="btn">Register</button>
+        <div class="mb-5 mt-3">
+            <button type="submit" class="btn btn-primary rounded">Register</button>
+        </div>
     {{ form_end(registrationForm) }}
+    </div>
 {% endblock %}
