--- a/templates/clean.html.twig
+++ b/templates/clean.html.twig
@@ -39,6 +39,12 @@
                         <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href={{ path('about') }}>About</a></li>
                         <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href={{ path('post_view', { id: 1 }) }}>Sample Post</a></li>
                         <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href={{ path('contact') }}>Contact</a></li>
+                        {% if not is_granted("ROLE_USER") %}
+                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href={{ path('app_register') }}>Register</a></li>
+                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href={{ path('app_login') }}>Login</a></li>
+                        {% else %}
+                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href={{ path('app_logout') }}>Logout</a></li>
+                        {% endif %}
                     </ul>
                 </div>
             </div>
