Modify the header image dynamically, the post page with real game articles and the post show with the selected article

--- a/clean.html.twig
+++ b/clean.html.twig
@@ -39,7 +39,7 @@
 						<a class="nav-link px-lg-3 py-3 py-lg-4" href="{{path('page_about')}}">About</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link px-lg-3 py-3 py-lg-4" href="{{path('post_view', {'id': 1})}}">Sample Post</a>
+						<a class="nav-link px-lg-3 py-3 py-lg-4" href="{{path('post_show', {'id': 1})}}">Sample Post</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link px-lg-3 py-3 py-lg-4" href="{{path('page_contact')}}">Contact</a>
