--- a/templates/clean.html.twig
+++ b/templates/clean.html.twig
@@ -37,7 +37,6 @@
                     <ul class="navbar-nav ms-auto py-4 py-lg-0">
                         <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href={{ path('post_home') }}>Home</a></li>
                         <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href={{ path('about') }}>About</a></li>
-                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href={{ path('post_view', { id: 1 }) }}>Sample Post</a></li>
                         <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href={{ path('contact') }}>Contact</a></li>
                         {% if not is_granted("ROLE_USER") %}
                         <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href={{ path('app_register') }}>Register</a></li>
@@ -52,8 +51,7 @@
         </nav>
 
         {% block header %}
-        <header class="masthead" style="background-image: url({{ asset('clean/assets/img/home-bg.jpg') }})">
-
+            <header class="masthead" style="background-image: url({% block bg %}https://www.numerama.com/content/uploads/2020/09/nswitchds_hades_01.jpg{% endblock %})">
             <div class="container position-relative px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-7">
