--- a/templates/post/index.html.twig
+++ b/templates/post/index.html.twig
@@ -6,27 +6,24 @@
     {% block subTitle %}A Blog Theme by Start Bootstrap{% endblock %}
 
     {% block body %}
-    {# <pre>
-        {{ dump(posts) }}
-    </pre> #}
     <!-- Main Content-->
     <div class="container px-4 px-lg-5">
         <div class="row gx-4 gx-lg-5 justify-content-center">
             <div class="col-md-10 col-lg-8 col-xl-7">
                 <!-- Post preview-->
                 {% for post in posts %}
-                <div class="post-preview">
-                    <a href="{{ path('post_view', {id: post.id}) }}">
+                <div class="post-preview mb-3">
+                    <a href="{{ path('post_show', {slug: post.slug}) }}">
                         <h2 class="post-title">{{ post.title }}</h2>
                         <img src="{{ post.image }}" alt="" style="width: 100%">
-                        <h3 class="post-subtitle">{{ post.content | u.truncate(500, "...") | raw }}</h3>
+                        <p class="post-subtitle">{{ post.content | u.truncate(225, "...") | raw }}</p>
                     </a>
-                    <p class="post-meta">Posted by
-                        <a href="#">{{ post.user.email }}</a><br>
-                        {{ post.createdAt | ago }} - Classé dans {{ post.category.name }}
-                    </p>
+                    <div class="post-meta">
+                        Posted by
+                        <a href="#">{{ post.user.email }}</a>
+                        <div>{{ post.createdAt | ago }} - Classé dans {{ post.category.name }}</div>
+                    </div>
                 </div>
-                <hr>
             {% endfor %}
             </div>
         </div>
