--- a/templates/post/index.html.twig
+++ b/templates/post/index.html.twig
@@ -8,24 +8,28 @@
     {% block body %}
     <!-- Main Content-->
     <div class="container px-4 px-lg-5">
-        <div class="row gx-4 gx-lg-5 justify-content-center">
-            <div class="col-md-10 col-lg-8 col-xl-7">
-                <!-- Post preview-->
-                {% for post in posts %}
-                <div class="post-preview mb-3">
-                    <a href="{{ path('post_show', {slug: post.slug}) }}">
-                        <h2 class="post-title">{{ post.title }}</h2>
-                        <img src="{{ post.image }}" alt="" style="width: 100%">
-                        <p class="post-subtitle">{{ post.content | u.truncate(225, "...") | raw }}</p>
-                    </a>
-                    <div class="post-meta">
-                        Posted by
-                        <a href="#">{{ post.user.email }}</a>
-                        <div>{{ post.createdAt | ago }} - Classé dans {{ post.category.name }}</div>
+                <div class="row gx-4 gx-lg-5 justify-content-center">
+                    <div class="col-md-12 col-lg-9 col-xl-10">
+                        <!-- Post preview-->
+                        {% for post in posts %}
+                        <div class="post-preview mb-3">
+                            <a href="{{ path('post_show', {slug: post.slug}) }}">
+                                <h2 class="post-title">{{ post.title }}</h2>
+                                <img src="{{ post.image }}" alt="" style="width: 100%">
+                            </a>
+                            <p class="post-subtitle">{{ post.content | u.truncate(750, "...") | raw }}</p>
+                            <div class="post-meta">
+                                Posted by
+                                <a href="#">{{ post.user.email }}</a>
+                                <div>{{ post.createdAt | ago }} - Classé dans {{ post.category.name }}</div>
+                            </div>
+                        </div>
+                         {% endfor %}
+                    </div>
+                    <div class="col-md-12 col-lg-3 col-xl-2 text-center">
+                        SIDEBAR
                     </div>
                 </div>
-            {% endfor %}
             </div>
-        </div>
     </div>
 {% endblock %}
