--- a/templates/post/index.html.twig
+++ b/templates/post/index.html.twig
@@ -8,8 +8,8 @@
     {% block body %}
     <!-- Main Content-->
     <div class="container px-4 px-lg-5">
-                <div class="row gx-4 gx-lg-5 justify-content-center">
-                    <div class="col-md-12 col-lg-9 col-xl-10">
+                <div class="row gx-5 justify-content-center">
+                    <div class="col-md-12 col-lg-8  bg-light p-5 rounded border border-warning">
                         <!-- Post preview-->
                         {% for post in posts %}
                         <div class="post-preview mb-3">
@@ -17,7 +17,7 @@
                                 <h2 class="post-title">{{ post.title }}</h2>
                                 <img src="{{ post.image }}" alt="" style="width: 100%">
                             </a>
-                            <p class="post-subtitle">{{ post.content | u.truncate(750, "...") | raw }}</p>
+                            <p class="post-subtitle">{{ post.content | u.truncate(675, "...") | raw }}</p>
                             <div class="post-meta">
                                 Posted by
                                 <a href="#">{{ post.user.email }}</a>
@@ -26,8 +26,25 @@
                         </div>
                          {% endfor %}
                     </div>
-                    <div class="col-md-12 col-lg-3 col-xl-2 text-center">
-                        SIDEBAR
+                    <div class="col-md-12 col-lg-4 text-center bg-warning p-5 rounded">
+                        <div class="bg-danger rounded text-warning p-1">
+                            <h2>Archives</h2>
+                        </div>
+                        <!-- Old posts preview -->
+                        {% for post in oldPosts %}
+                        <div class="post-preview mb-3">
+                            <a href="{{ path('post_show', {slug: post.slug}) }}">
+                                <h5 class="post-title">{{ post.title }}</h5>
+                            </a>
+                                <img src="{{ post.image }}" alt="" style="width: 100%">
+                            <p class="post-subtitle">{{ post.content | u.truncate(200, "...") | raw }}</p>
+                            {# <div class="post-meta">
+                                Posted by
+                                <a href="#">{{ post.user.email }}</a>
+                                <div>{{ post.createdAt | ago }} - Classé dans {{ post.category.name }}</div>
+                            </div> #}
+                        </div>
+                        {% endfor %}
                     </div>
                 </div>
             </div>
