Update the content of the headers

--- a/templates/admin/post/add.html.twig
+++ b/templates/admin/post/add.html.twig
@@ -1,6 +1,9 @@
 {% extends 'clean.html.twig' %}
 
-{% block title %}Ajout d'une post{% endblock %}
+{% block title %}Ajouter un article{% endblock %}
+
+{# header #}
+{% block subTitle %}Remplissez les champs suivants pour ajouter un article{% endblock %}
 
     {% block body %}
         {{ form(form) }}
