--- a/templates/post/index.html.twig
+++ b/templates/post/index.html.twig
@@ -1,9 +1,9 @@
 {% extends 'clean.html.twig' %}
 
-{% block title %}Accueil Posts{% endblock %}
+{% block title %}Derniers articles{% endblock %}
 
 {# header #}
-{% block subTitle %}A Blog Theme by Start Bootstrap{% endblock %}
+{% block subTitle %}Retrouvez les news de mes derniers jeux testés{% endblock %}
 
 {% block body %}
 <!-- Main Content-->
