--- a/templates/clean.html.twig
+++ b/templates/clean.html.twig
@@ -24,68 +24,34 @@
     </head>
     <body>
 
-        <!-- Navigation-->
-        <nav class="navbar navbar-expand-lg navbar-light" id="mainNav">
-            <div class="container px-4 px-lg-5">
-                <a class="navbar-brand" href="index.html">JeuxVideosNews</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-                    Menu
-                    <i class="fas fa-bars"></i>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarResponsive">
-                    <ul class="navbar-nav ms-auto py-4 py-lg-0">
-                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href={{ path('post_home') }}>Accueil</a></li>
-                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href={{ path('about') }}>A propos</a></li>
-                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href={{ path('contact') }}>Contact</a></li>
-                        {% if not is_granted("ROLE_USER") %}
-                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href={{ path('app_register') }}>Enregistrement</a></li>
-                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href={{ path('app_login') }}>Connexion</a></li>
-                        {% else %}
-                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href={{ path('post_add') }}>Créer un Article</a></li>
-                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href={{ path('app_logout') }}>Déconnexion</a></li>
-                        {% endif %}
-                    </ul>
-                </div>
-            </div>
-        </nav>
+        {# Navbar #}
+        {% include "common/_nav.html.twig" %}
 
+        {# Header #}
         {% block header %}
             <header class="masthead" style="background-image: url({% block bg %}https://www.numerama.com/content/uploads/2020/09/nswitchds_hades_01.jpg{% endblock %})">
-            <div class="container position-relative px-4 px-lg-5">
-                <div class="row gx-4 gx-lg-5 justify-content-center">
-                    <div class="col-md-10 col-lg-8 col-xl-7">
-                        <div class="site-heading">
-                                <h1>
-                                    {% block h1 %}{{ block('title')}}{% endblock %}
-                                </h1>
-                                <h2 class="subheading">
-                                    {% block subTitle %}{% endblock %}
-                                </h2>
-                                <span class="meta">
-                                {% block meta %}{% endblock %}
-                            </span>
+                <div class="container position-relative px-4 px-lg-5">
+                    <div class="row gx-4 gx-lg-5 justify-content-center">
+                        <div class="col-md-10 col-lg-8 col-xl-7">
+                            <div class="site-heading">
+                                    <h1>
+                                        {% block h1 %}{{ block('title')}}{% endblock %}
+                                    </h1>
+                                    <h2 class="subheading">
+                                        {% block subTitle %}Retrouver l'actualité de mes derniers jeux testés{% endblock %}
+                                    </h2>
+                                    <span class="meta">
+                                    {% block meta %}{% endblock %}
+                                </span>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
-        </header>
-        {% endblock header %}
+            </header>
+        {% endblock %}
 
         {# Affichage du message d'alerte #}
-        <main class="mb-4">
-			<div class="container px-4 px-lg-5">
-				<div class="row gx-4 gx-lg-5 justify-content-center">
-					<div class="col-md-10 col-lg-8 col-xl-7">
-						{% for flashSuccess in app.flashes('verify_email_success') %}
-							<div class="alert alert-success" role="alert">{{ flashSuccess }}</div>
-						{% endfor %}
-						{% for flashError in app.flashes('verify_email_error') %}
-							<div class="alert alert-error" role="alert">{{ flashError }}</div>
-						{% endfor %}
-					</div>
-				</div>
-			</div>
-		</main>
+        {% include "common/_flash.html.twig" %}
 
         <!-- Body -->
         <div class="container">
@@ -93,41 +59,7 @@
         </div>
 
         <!-- Footer-->
-        <footer class="mt-3">
-            <div class="container px-4 px-lg-5">
-                <div class="row gx-4 gx-lg-5 justify-content-center">
-                    <div class="col-md-10 col-lg-8 col-xl-7">
-                        <ul class="list-inline text-center">
-                            <li class="list-inline-item">
-                                <a href="#!">
-                                    <span class="fa-stack fa-lg">
-                                        <i class="fas fa-circle fa-stack-2x"></i>
-                                        <i class="fab fa-twitter fa-stack-1x fa-inverse"></i>
-                                    </span>
-                                </a>
-                            </li>
-                            <li class="list-inline-item">
-                                <a href="#!">
-                                    <span class="fa-stack fa-lg">
-                                        <i class="fas fa-circle fa-stack-2x"></i>
-                                        <i class="fab fa-facebook-f fa-stack-1x fa-inverse"></i>
-                                    </span>
-                                </a>
-                            </li>
-                            <li class="list-inline-item">
-                                <a href="#!">
-                                    <span class="fa-stack fa-lg">
-                                        <i class="fas fa-circle fa-stack-2x"></i>
-                                        <i class="fab fa-github fa-stack-1x fa-inverse"></i>
-                                    </span>
-                                </a>
-                            </li>
-                        </ul>
-                        <div class="small text-center text-muted fst-italic">Copyright &copy; Your Website 2021</div>
-                    </div>
-                </div>
-            </div>
-        </footer>
+        {% include "common/_footer.html.twig" %}
 
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"></script>
