--- a/templates/admin/category/add.html.twig
+++ b/templates/admin/category/add.html.twig
@@ -1,9 +1,11 @@
-{% extends 'base.html.twig' %}
+{% extends 'clean.html.twig' %}
 
+{% block title %}Ajouter une catégorie{% endblock %}
 
-{% block title %}Ajout d'une catégorie{% endblock %}
+{# header #}
+{% block subTitle %}Remplissez les champs suivants pour ajouter une catégorie{% endblock %}
 
-{% block body %}
-    <h1>Ajout d'une catégorie</h1>
-    {{ form(form) }}
-{% endblock %}
+    {% block body %}
+        {{ form(form) }}
+        <div class="my-5"></div>
+    {% endblock %}
