--- a/templates/admin/post/add.html.twig
+++ b/templates/admin/post/add.html.twig
@@ -1,11 +1,7 @@
-{% extends 'clean.html.twig' %}
+{% extends 'admin/index.html.twig' %}
 
 {% block title %}Ajouter un article{% endblock %}
 
-{# header #}
-{% block subTitle %}Remplissez les champs suivants pour ajouter un article{% endblock %}
-
-    {% block body %}
+    {% block main %}
         {{ form(form) }}
-        <div class="my-5"></div>
     {% endblock %}
