--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -31,19 +31,26 @@
         <div id="layoutSidenav">
             {# sidebar #}
             {% include "admin/common/_sidebar.html.twig" %}
-            <div id="layoutSidenav_content" class="bg-secondary">
+            <div id="layoutSidenav_content" class="bg-light">
                 <main>
                     <div class="container my-3">
                     {# Main #}
                         {% block main %}{% endblock %}
                     </div>
                 </main>
+                <div class="my-5"></div>
                 {# footer #}
                 {% include "admin/common/_footer.html.twig" %}
             </div>
         </div>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
         <script src="js/scripts.js"></script>
+
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.js" crossorigin="anonymous"></script>
+        {# <script src="assets/demo/chart-area-demo.js"></script>
+        <script src="assets/demo/chart-bar-demo.js"></script> #}
+        <script src="https://cdn.jsdelivr.net/npm/simple-datatables@latest" crossorigin="anonymous"></script>
+        <script src="js/datatables-simple-demo.js"></script>
     </body>
 </html>
 
