--- a/templates/common/_flash.html.twig
+++ b/templates/common/_flash.html.twig
@@ -1,11 +1,11 @@
 <main class="mb-4">
     <div class="container px-4 px-lg-5">
         <div class="row gx-4 gx-lg-5 justify-content-center">
-            <div class="col-md-10 col-lg-8 col-xl-7">
-                {% for flashSuccess in app.flashes('verify_email_success') %}
+            <div class="col-md-10 col-lg-8 col-xl-7 text-center">
+                {% for flashSuccess in app.flashes('success') %}
                     <div class="alert alert-success" role="alert">{{ flashSuccess }}</div>
                 {% endfor %}
-                {% for flashError in app.flashes('verify_email_error') %}
+                {% for flashError in app.flashes('error') %}
                     <div class="alert alert-error" role="alert">{{ flashError }}</div>
                 {% endfor %}
             </div>
