--- a/clean.html.twig
+++ b/clean.html.twig
@@ -58,7 +58,7 @@
 				<div class="row gx-4 gx-lg-5 justify-content-center">
 					<div class="col-md-10 col-lg-8 col-xl-7">
 						{# <div class="alert alert-danger" role="alert">test</div> #}
-						{% for flashError in app.flashes('verify_email_error') %}
+						{% for flashError in app.flashes('error') %}
 							<div class="alert alert-danger" role="alert">{{ flashError }}</div>
 						{% endfor %}
 					</div>
