--- a/templates/post/index.html.twig
+++ b/templates/post/index.html.twig
@@ -1,46 +1,39 @@
 {% extends 'clean.html.twig' %}
 
-{% block title %}Derniers articles{% endblock %}
-
-{# header #}
-{% block subTitle %}Retrouvez les news de mes derniers jeux testés{% endblock %}
+{% block title %}Derniers articles publiés{% endblock %}
+{% block subTitle %}Retrouvez les news à propos de mes derniers jeux testés{% endblock %}
 
 {% block body %}
 <!-- Main Content-->
 <div class="container px-4 px-lg-5">
     <div class="row gx-5 justify-content-center">
-        <div class="col-md-12 col-lg-8  bg-light p-5 rounded border border-warning">
-            <!-- Post preview-->
-            {% for post in posts %}
-            <div class="post-preview mb-3">
-                <a href="{{ path('post_show', {slug: post.slug}) }}">
-                    <h2 class="post-title">{{ post.title }}</h2>
-                    <img src="{{ post.image }}" alt="" style="width: 100%">
-                </a>
-                <p class="post-subtitle">{{ post.content | u.truncate(675, "...") | raw }}</p>
-                <div class="post-meta">
-                    Posted by
-                    <a href="#">{{ post.user.email }}</a>
-                    <div>{{ post.createdAt | ago }} - Classé dans {{ post.category.name }}</div>
+        <main class="col-md-12 col-lg-8 bg-light p-5 rounded border border-warning">
+            {% block main %}
+                <!-- Post preview-->
+                {% for post in posts %}
+                <article class="post-preview mb-3">
+                    <a href="{{ path('post_show', {slug: post.slug}) }}">
+                        <h2 class="post-title">{{ post.title }}</h2>
+                        <img src="{{ post.image }}" alt="" style="width: 100%">
+                    </a>
+                    <p class="post-subtitle">{{ post.content | u.truncate(675, "...") | raw }}</p>
+                    <div class="post-meta">
+                        Posté par
+                        <a href="#">{{ post.user.email }}</a>
+                        <div>{{ post.createdAt | ago }} - Classé dans {{ post.category.name }}</div>
+                    </div>
+                </article>
+                {% endfor %}
+            {% endblock main%}
+        </main>
+        <aside class="col-md-12 col-lg-4 text-center">
+            {% block sidebar %}
+                <!-- Old posts preview -->
+                <div class="bg-warning p-5 rounded">
+                    {% include "common/_sidebar.html.twig" %}
                 </div>
-            </div>
-            {% endfor %}
-        </div>
-        <div class="col-md-12 col-lg-4 text-center bg-warning p-5 rounded">
-            <div class="bg-danger rounded text-warning p-1">
-                <h2>Archives</h2>
-            </div>
-            <!-- Old posts preview -->
-            {% for post in oldPosts %}
-            <div class="post-preview mb-3">
-                <a href="{{ path('post_show', {slug: post.slug}) }}">
-                    <h5 class="post-title">{{ post.title }}</h5>
-                </a>
-                    <img src="{{ post.image }}" alt="" style="width: 100%">
-                <p class="post-subtitle">{{ post.content | u.truncate(350, "...") | raw }}</p>
-            </div>
-            {% endfor %}
-        </div>
+            {% endblock %}
+        </aside>
     </div>
 </div>
 {% endblock %}
