Create the admin postController and generate the corresponding views

--- a/templates/admin/common/_navbar.html.twig
+++ b/templates/admin/common/_navbar.html.twig
@@ -1,6 +1,6 @@
 <nav class="sb-topnav navbar navbar-expand navbar-dark bg-dark">
     <!-- Navbar Brand-->
-    <a class="navbar-brand ps-3" href="index.html">Page administrateur</a>
+    <a class="navbar-brand ps-3" href="{{ path('admin_home') }}">Page administrateur</a>
     <!-- Navbar-->
         <div class="navbar-nav"><a href="{{ path('post_home') }}" class="nav-link">Retour à l'accueil</a></div>
     <ul class="navbar-nav d-none d-md-inline-block ms-auto me-0 me-md-3 my-2 my-md-0">
