Modify the active option asyncroniously

--- a/templates/admin/post/index.html.twig
+++ b/templates/admin/post/index.html.twig
@@ -57,9 +57,10 @@
     window.onload = () => {
         let activate = document.querySelectorAll("[type=checkbox]")
         for(let button of activate) {
-            button.addEventListener("click", function(){
+            button.addEventListener("click", function() {
                 let xmlhttp = new XMLHttpRequest
                 xmlhttp.open("get", `/admin/post/activate/${this.dataset.id}`)
+                xmlhttp.onreadystatechange = () => xmlhttp.status === 200 && console.log(xmlhttp.response);
                 xmlhttp.send()
             })
         }
