--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -51,6 +51,8 @@
         <script src="assets/demo/chart-bar-demo.js"></script> #}
         <script src="https://cdn.jsdelivr.net/npm/simple-datatables@latest" crossorigin="anonymous"></script>
         <script src="js/datatables-simple-demo.js"></script>
+        {% block modal %}{% endblock %}
     </body>
+
 </html>
 
