--- a/templates/post/show.html.twig
+++ b/templates/post/show.html.twig
@@ -4,5 +4,6 @@
 
 {% block bg %}{{ post.image }}{% endblock %}
 {% block h1 %}{{ block('title') }}{% endblock %}
+{% block subTitle %}{% endblock %}
 
 {% block main %}{{ post.content | raw }}{% endblock %}
