Improve dashboard form display

--- a/templates/admin/category/add.html.twig
+++ b/templates/admin/category/add.html.twig
@@ -6,6 +6,8 @@
 {% block subTitle %}Remplissez les champs suivants pour ajouter une catégorie{% endblock %}
 
     {% block main %}
-        {{ form(form) }}
+        <div class="text-light">
+            {{ form(form) }}
+        </div>
         <div class="my-5"></div>
     {% endblock %}
