--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -31,9 +31,9 @@
         <div id="layoutSidenav">
             {# sidebar #}
             {% include "admin/common/_sidebar.html.twig" %}
-            <div id="layoutSidenav_content" class="bg-light">
+            <div id="layoutSidenav_content" class="bg-secondary">
                 <main>
-                    <div class="container my-3">
+                    <div class="container pt-5">
                     {# Main #}
                         {% block main %}{% endblock %}
                     </div>
