--- a/templates/admin/post/add.html.twig
+++ b/templates/admin/post/add.html.twig
@@ -3,5 +3,7 @@
 {% block title %}Ajouter un article{% endblock %}
 
     {% block main %}
-        {{ form(form) }}
+        <div class="text-light">
+            {{ form(form) }}
+        </div>
     {% endblock %}
