--- a/templates/admin/category/index.html.twig
+++ b/templates/admin/category/index.html.twig
@@ -5,7 +5,7 @@
 {% block main %}
 {% include "common/_flash.html.twig" %}
 <div class="card bg-dark">
-    <div class="card-header d-flex justify-content-between">
+    <div class="card-header d-flex justify-content-between align-items-center">
         <h2 class="text-secondary">
             <i class="fas fa-table me-1"></i>
             Liste des catégorie
@@ -34,7 +34,6 @@
                         <td>{{ category.parent }}</td>
                         <td class="text-end">
                             <a href="{{ path('admin_category_edit', { id: category.id }) }}" class="btn-sm btn-warning btn active rounded" role="button" aria-pressed="true">Modifier</a>
-                            <a href="{{ path('admin_category_delete', { id: category.id }) }}" class="btn-sm btn-danger btn active rounded" role="button" aria-pressed="true">X</a>
                             <a href="" class="btn btn-sm btn-danger rounded" role="button" data-bs-toggle="modal" data-bs-target="#modal" data-id="{{ category.id }}"  data-title="{{ category.name }}" onclick="deleteModalConfirm({{ category.id }})" id="deleteButton_{{ category.id}}" aria-pressed="true">X</a>
                         </td>
                     </tr>
