--- a/templates/admin/post/index.html.twig
+++ b/templates/admin/post/index.html.twig
@@ -5,7 +5,7 @@
 {% block main %}
 {% include "common/_flash.html.twig" %}
 <div class="card bg-dark">
-    <div class="card-header d-flex justify-content-between">
+    <div class="card-header d-flex justify-content-between align-items-center">
         <h2 class="text-secondary">
             <i class="fas fa-table me-1"></i>
             Liste des articles
