Improve image content display and add fixtures

--- a/templates/clean.html.twig
+++ b/templates/clean.html.twig
@@ -21,6 +21,7 @@
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v5.15.3/js/all.js" crossorigin="anonymous"></script>
         {% endblock %}
+        {% block style %}{% endblock %}
     </head>
     <body>
 
