--- a/templates/admin/post/index.html.twig
+++ b/templates/admin/post/index.html.twig
@@ -3,70 +3,77 @@
 {% block title %}Admin - Liste des posts{% endblock %}
 
 {% block main %}
-{% include "common/_flash.html.twig" %}
-<div class="card bg-dark">
+  <div class="card bg-dark">
     <div class="card-header d-flex justify-content-between align-items-center">
-        <h2 class="text-secondary">
-            <i class="fas fa-table me-1"></i>
-            Liste des articles
-        </h2>
-        <div>
-            <a href="{{ path('admin_post_add') }}" class="btn btn-success btn active rounded" role="button" aria-pressed="true">Nouvel article</a>
-        </div>
+      <h2 class="text-secondary">
+        <i class="fas fa-table me-1"></i>
+        Liste des articles
+      </h2>
+      <div>
+        <a href="{{ path('admin_post_add') }}" class="btn btn-success btn active rounded" role="button" aria-pressed="true">Nouvel article</a>
+      </div>
     </div>
-        <div class="table-responsive">
-            <table id="datatablesSimple" class="table table-light mb-0 table-striped">
-                <thead class="table-success">
-                    <tr>
-                        <th scope="col" class="text-center">Id</th>
-                        <th scope="col ">Title</th>
-                        <th scope="col">Auteur</th>
-                        <th scope="col">Catégorie</th>
-                        <th scope="col" class="text-center">Date</th>
-                        <th scope="col">Active</th>
-                        <th scope="col" class="text-center">Actions</th>
-                    </tr>
-                </thead>
-                <tbody>
-                {% for post in posts %}
-                    <tr>
-                        <th scope="row" class="text-center">{{ post.id }}</th>
-                        <td class="w-50"><a class="link-success" href="{{ path('post_show', {slug: post.slug}) }}">{{ post.title }}</a></td>
-                        <td>{{ post.user.email}}</td>
-                        <td>{{ post.category.name}}</td>
-                        <td>{{ post.createdAt | date('d:m:Y H:i') }}</td>
-                        <td>
-                            <div class="form-check form-switch">
-                                <input class="form-check-input" type="checkbox" name="active" id="customSwitch{{ post.id }}" data-id="{{ post.id }}" {{ post.active ? 'checked' : null}}>
-                            </div>
-                        </td>
-                        <td class="text-end">
-                            <a href="{{ path('admin_post_edit', { id: post.id }) }}" class="btn btn-sm btn-warning rounded" role="button" aria-pressed="true">Modifier</a>
-                            <a href="" class="btn btn-sm btn-danger rounded" role="button" data-bs-toggle="modal" data-bs-target="#modal" data-id="{{ post.id }}"  data-title="{{ post.title }}" onclick="deleteModalConfirm({{ post.id }})" id="deleteButton_{{ post.id}}"  aria-pressed="true">X</a>
-                        </td>
-                    </tr>
-                {% endfor %}
-                </tbody>
-            </table>
+    <div class="table-responsive">
+      <table id="datatablesSimple" class="table table-light mb-0 table-striped">
+        <thead class="table-success">
+          <tr>
+            <th scope="col" class="text-center">Id</th>
+            <th scope="col ">Title</th>
+            <th scope="col">Auteur</th>
+            <th scope="col">Catégorie</th>
+            <th scope="col" class="text-center">Date</th>
+            <th scope="col">Active</th>
+            <th scope="col" class="text-center">Actions</th>
+          </tr>
+        </thead>
+        <tbody>
+          {% for post in posts %}
+            <tr>
+              <th scope="row" class="text-center">{{ post.id }}</th>
+              <td class="w-50">
+                <a class="link-success" href="{{ path('post_show', {slug: post.slug}) }}">{{ post.title }}</a>
+              </td>
+              <td>{{ post.user.email}}</td>
+              <td>{{ post.category.name}}</td>
+              <td>{{ post.createdAt | date('d:m:Y H:i') }}</td>
+              <td>
+                <div class="form-check form-switch">
+                  <input class="form-check-input" type="checkbox" name="active" id="customSwitch{{ post.id }}" data-id="{{ post.id }}" {{ post.active ? 'checked' : null}} {% if not(is_granted('ROLE_SUPER_ADMIN')) %} disabled="true" {% endif %}>
+                </div>
+              </td>
+              <td class="text-end">
+                <a href="{{ path('admin_post_edit', { id: post.id }) }}" class="btn btn-sm btn-warning rounded" role="button" aria-pressed="true">Modifier</a>
+                <a href="" class="btn btn-sm btn-danger rounded" role="button" data-bs-toggle="modal" data-bs-target="#modal" data-id="{{ post.id }}" data-title="{{ post.title }}" onclick="deleteModalConfirm({{ post.id }})" id="deleteButton_{{ post.id}}" aria-pressed="true">X</a>
+              </td>
+            </tr>
+          {% endfor %}
+        </tbody>
+      </table>
     </div>
-{% endblock %}
+  {% endblock %}
 
-{% block modal %}
-    {% include "admin/common/_deleteModal.html.twig" with {content: {type: "l'article", name: "le titre", path: "/admin/post/delete/" }} %}
-{% endblock %}
+  {% block modal %}
+    {% include "admin/common/_deleteModal.html.twig" with {
+      content : {
+        type: "l'article",
+        name: "le titre",
+        path: "/admin/post/delete/"
+      }
+    } %}
+  {% endblock %}
 
-{% block javascripts %}
-{{ parent() }}
+  {% block javascripts %}
+    {{ parent() }}
     <script>
-        window.onload = () => {
-            let activate = document.querySelectorAll("[type=checkbox]")
-            for(let button of activate) {
-                button.addEventListener("click", function(){
-                    let xmlhttp = new XMLHttpRequest
-                    xmlhttp.open("get", `/admin/post/activate/${this.dataset.id}`)
-                    xmlhttp.send()
-                })
-            }
+      window.onload = () => {
+        let activate = document.querySelectorAll("[type=checkbox]")
+        for (let button of activate) {
+          button.addEventListener("click", function () {
+            let xmlhttp = new XMLHttpRequest
+            xmlhttp.open("get", `/admin/post/activate/${this.dataset.id}`)
+            xmlhttp.send()
+          })
         }
+      }
     </script>
-{% endblock %}
+  {% endblock %}
